<resources>
    <string name="app_name">LMQMusic</string>
    <string name="we_need_permissions_to_download">We need permissions to download and save file.</string>
    <string name="ok">OK</string>
    <string name="cancel1">Cancel</string>
    <string name="permission_denied">Permission denied</string>
    <string name="rationale_location_contacts">This app needs access to your location and contacts to know where and who you are.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="returned_from_app_settings_to_activity">
        Returned from app settings to MainActivity with the following permissions:
        \n\nCamera: %s
        \nLocation &amp; Contacts: %s
        \nSMS: %s
    </string>
    <string name="playing_from">Playing from</string>
    <string name="default_time">00:00</string>
    <string name="we_need_permissions_to_read_storage">We need permissions to read storage</string>
    <string name="playlist">Playlist</string>
    <string name="clouds">Clouds</string>
    <string name="library">Library</string>
    <string name="songs">Songs</string>
    <string name="search_song">Search song</string>
    <string name="settings">Settings</string>
    <string name="wifi_transfer">Wifi Transfer</string>
    <string name="dashboard">Dashboard</string>
    <string name="create_playlist">+ Create Playlist</string>
    <string name="now_playing">NowPlaying</string>
    <string name="add_new_playlist">Add new playlist</string>
    <string name="name">Name (require)</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="add_to_nowplaying">Add to now playing</string>
    <string name="edit_playlist">Edit playlist</string>
    <string name="favorites">Favorites</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="remove_playlist">Remove playlist</string>
    <string name="save">Save</string>
    <string name="channel_name">Channel name</string>
    <string name="channel_description">Channel Description</string>
    <string name="cd_next">CD next</string>
    <string name="alarm">Alarm</string>
    <string name="remove">Remove</string>
    <string name="end_of_this_song">End of this song</string>
    <string name="minutes_60">1 hour</string>
    <string name="minutes_30">30 minutes</string>
    <string name="minutes_20">20 minutes</string>
    <string name="minutes_15">15 minutes</string>
    <string name="enter_a_url_in_the_address_bar_of_your_computer_s_browser">Enter a URL in the address bar of your computer’s browser:</string>
    <string name="make_sure_both_your_computer_and_your">Make sure both your computer and your device are using the same network. Once you get there, follow the instructions appeared.</string>
    <string name="press_on_finish_to_turn_off_wi_fi_transfer_signal">Press on Finish to turn off Wi-Fi transfer signal.</string>
    <string name="finish">Finish</string>
    <string name="link_connect_wifi_transfer">http://%s:%s</string>
    <string name="favorite">Favorite</string>
</resources>
