<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".ui.list_playlist.dialog_new_playlist.DialogAddPlaylist">

    <TextView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/shape_toolbar"
        android:gravity="center"
        android:text="@string/add_new_playlist"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/shape_edittext"
        android:hint="@string/name"
        android:inputType="textAutoComplete"
        android:paddingStart="@dimen/_8sdp" />

    <LinearLayout
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_8sdp"
            android:layout_weight="0.5"
            android:background="@drawable/shape_cancel"
            android:text="@string/cancel1"
            android:textColor="@color/white" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/create"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_8sdp"
            android:layout_weight="0.5"
            android:background="@drawable/shape_create"
            android:text="@string/save"
            android:textColor="@android:color/white" />

    </LinearLayout>


</LinearLayout>