<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.alarm.AlarmFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="match_parent"
            android:background="@drawable/ripple"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/alarm"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <ImageButton
            android:id="@+id/button_save"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="match_parent"
            android:background="@drawable/ripple"
            android:src="@drawable/ic_save" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.7"
        android:background="@color/black" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/end_of_this_song_bt"
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="0.8"
                    android:background="@drawable/ripple_item"
                    android:gravity="left|center"
                    android:paddingLeft="@dimen/_16sdp"
                    android:text="@string/end_of_this_song" />

                <ImageView
                    android:id="@+id/check_0"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_check"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minutes_15_bt"
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="0.8"
                    android:background="@drawable/ripple_item"
                    android:gravity="left|center"
                    android:paddingLeft="@dimen/_16sdp"
                    android:text="@string/minutes_15" />

                <ImageView
                    android:id="@+id/check_1"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_check"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minutes_20_bt"
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="0.8"
                    android:background="@drawable/ripple_item"
                    android:gravity="left|center"
                    android:paddingLeft="@dimen/_16sdp"
                    android:text="@string/minutes_20" />

                <ImageView
                    android:id="@+id/check_2"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_check"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minutes_30_bt"
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="0.8"
                    android:background="@drawable/ripple_item"
                    android:gravity="left|center"
                    android:paddingLeft="@dimen/_16sdp"
                    android:text="@string/minutes_30" />

                <ImageView
                    android:id="@+id/check_3"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_check"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minutes_60_bt"
                    android:layout_width="0dp"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="0.8"
                    android:background="@drawable/ripple_item"
                    android:gravity="left|center"
                    android:paddingLeft="@dimen/_16sdp"
                    android:text="@string/minutes_60" />

                <ImageView
                    android:id="@+id/check_4"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_check"
                    android:visibility="invisible" />
            </LinearLayout>


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</LinearLayout>