<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.wifi_transfer.WifiTransferFragment">

    <include
        android:id="@+id/constraint_layout_toolbar"
        layout="@layout/partial_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_monitor"
        app:layout_constraintBottom_toTopOf="@id/textView5"
        app:layout_constraintDimensionRatio="w, 1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout_toolbar"
        app:layout_constraintWidth_percent="0.45" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:alpha="0.7"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/enter_a_url_in_the_address_bar_of_your_computer_s_browser"
        app:layout_constraintBottom_toTopOf="@id/text_view_link_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/text_view_link_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:alpha="0.7"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@id/text_view_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:alpha="0.7"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/make_sure_both_your_computer_and_your"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_link_address"
        app:layout_constraintWidth_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <Button
        android:id="@+id/button_finish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_connect_clouds"
        android:text="@string/finish"
        android:textColor="@color/blue"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintBottom_toTopOf="@id/text_view_disconnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:id="@+id/text_view_disconnect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:alpha="0.7"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/press_on_finish_to_turn_off_wi_fi_transfer_signal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_finish"
        app:layout_constraintWidth_percent="0.85" />


</android.support.constraint.ConstraintLayout>