<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/playback"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/shape_toolbar"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_16sdp"
            android:src="@drawable/ic_song" />

        <LinearLayout
            android:layout_width="@dimen/_120sdp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp">

            <TextView
                android:id="@+id/song_name_playback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:lines="1"
                android:text="@string/playing_from"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/song_artist_playback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/playing_from"
                android:textAllCaps="true"
                android:lines="1"
                android:ellipsize="end"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/button_previous_playback"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="match_parent"
                android:src="@drawable/ic_previous"
                android:background="?attr/selectableItemBackgroundBorderless"/>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="match_parent">
                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/button_play_playback"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_play"
                    android:background="?attr/selectableItemBackgroundBorderless"/>
                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/button_pause_playback"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_pause"
                    android:visibility="invisible"
                    android:background="?attr/selectableItemBackgroundBorderless"/>
            </FrameLayout>



            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/button_next_playback"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="match_parent"
                android:src="@drawable/ic_next"
                android:background="?attr/selectableItemBackgroundBorderless"/>
        </LinearLayout>

    </LinearLayout>


    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/button_down"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ripple"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playback" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/button_playlist"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ripple"
        android:padding="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_playlist"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playback" />

    <LinearLayout
        android:id="@+id/play_now"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/button_playlist"
        app:layout_constraintStart_toEndOf="@+id/button_down"
        app:layout_constraintTop_toBottomOf="@+id/playback">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playing_from"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/playlist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_playing"
            android:textAllCaps="true" />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_song"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/no_image"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/button_more"
        app:layout_constraintStart_toEndOf="@+id/button_favorite"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/text_display_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/default_time"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/text_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:layout_marginBottom="8dp"
        android:text="@string/default_time"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <LinearLayout
        android:id="@+id/information_song"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingStart="@dimen/_16sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TextView
            android:id="@+id/song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playing_from"
            android:textAllCaps="true"
            android:lines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/song_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playing_from"
            android:textAllCaps="true"
            android:lines="1"
            android:ellipsize="end"/>

    </LinearLayout>

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/button_play"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ripple"
        android:scaleType="fitXY"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/button_pause"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ripple"
        android:scaleType="fitXY"
        android:src="@drawable/ic_pause"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/button_previous"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ripple"
        android:src="@drawable/ic_previous"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/button_play"
        app:layout_constraintStart_toEndOf="@+id/button_shuffle"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/button_next"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ripple"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/button_repeat"
        app:layout_constraintStart_toEndOf="@+id/button_play"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/button_favorite"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ripple"
        android:src="@drawable/ic_favorite_border"
        app:layout_constraintBottom_toTopOf="@+id/text_display_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/button_more"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ripple"
        android:src="@drawable/ic_more_horiz"
        app:layout_constraintBottom_toTopOf="@+id/text_duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/button_shuffle"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ripple"
        android:src="@drawable/ic_shuffle_disable"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/button_repeat"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ripple"
        android:src="@drawable/ic_repeat_disable"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />
</android.support.constraint.ConstraintLayout>